--- a/src/app/pages/admin/products/products.component.html
+++ b/src/app/pages/admin/products/products.component.html
@@ -1,1 +1,28 @@
-Here
+<div class="row">
+  <div class="col-8">
+    <div class="card">
+      <div class="card-header bg-primary">
+        <div class="row">
+          <div class="col-6">Product List</div>
+          <div class="col-6 text-end">
+            <div class="btn btn-sm btn-success">New</div>
+          </div>
+        </div>
+      </div>
+      <div class="card-body"></div>
+    </div>
+  </div>
+  <div class="col-4">
+    <div class="card">
+      <div class="card-header bg-primary">
+        <div class="row">
+          <div class="col-6">New Product</div>
+          <div class="col-6 text-end">
+            <div class="btn btn-sm btn-success">Close</div>
+          </div>
+        </div>
+      </div>
+      <div class="card-body"></div>
+    </div>
+  </div>
+</div>
