--- a/src/app/pages/admin/products/products.component.html
+++ b/src/app/pages/admin/products/products.component.html
@@ -1,24 +1,59 @@
 <div class="row">
-  <div class="col-8">
+  <div [ngClass]="isProductPanelVisible ? 'col-8' : 'col-12'">
     <div class="card">
       <div class="card-header bg-primary">
         <div class="row">
           <div class="col-6">Product List</div>
           <div class="col-6 text-end">
-            <div class="btn btn-sm btn-success">New</div>
+            <div class="btn btn-sm btn-success" (click)="onNewClick()">New</div>
           </div>
         </div>
       </div>
-      <div class="card-body"></div>
+      <div class="card-body">
+        <div class="row">
+          <div class="col-3">
+            <div class="card">
+              <div class="card-body">
+                <h4 class="card-title">Card title</h4>
+                <p class="card-text">Some example text. Some example text.</p>
+                <a href="#" class="card-link">Card link</a>
+                <a href="#" class="card-link">Another link</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-3">
+            <div class="card">
+              <div class="card-body">
+                <h4 class="card-title">Card title</h4>
+                <p class="card-text">Some example text. Some example text.</p>
+                <a href="#" class="card-link">Card link</a>
+                <a href="#" class="card-link">Another link</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-3">
+            <div class="card">
+              <div class="card-body">
+                <h4 class="card-title">Card title</h4>
+                <p class="card-text">Some example text. Some example text.</p>
+                <a href="#" class="card-link">Card link</a>
+                <a href="#" class="card-link">Another link</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
-  <div class="col-4">
+  <div class="col-4" *ngIf="isProductPanelVisible">
     <div class="card">
       <div class="card-header bg-primary">
         <div class="row">
           <div class="col-6">New Product</div>
           <div class="col-6 text-end">
-            <div class="btn btn-sm btn-success">Close</div>
+            <div class="btn btn-sm btn-success" (click)="onCloseClick()">
+              Close
+            </div>
           </div>
         </div>
       </div>
