--- a/src/app/pages/admin/products/products.component.html
+++ b/src/app/pages/admin/products/products.component.html
@@ -29,7 +29,7 @@
                 </div>
                 <div
                   class="btn btn-sm btn-success mx-2"
-                  (click)="onDeleteProduct(product)"
+                  (click)="onDeleteProduct(product.productId)"
                 >
                   Delete
                 </div>
