added page based on categories

--- a/src/app/pages/website/landing/landing.component.html
+++ b/src/app/pages/website/landing/landing.component.html
@@ -1,110 +1,115 @@
-<nav
-  class="navbar navbar-expand-lg bg-body-tertiary bg-primary"
-  data-bs-theme="dark"
->
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar scroll</a>
-    <button
-      class="navbar-toggler"
-      type="button"
-      data-bs-toggle="collapse"
-      data-bs-target="#navbarScroll"
-      aria-controls="navbarScroll"
-      aria-expanded="false"
-      aria-label="Toggle navigation"
-    >
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarScroll">
-      <ul
-        class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll"
-        style="--bs-scroll-height: 100px"
+<header>
+  <nav
+    class="navbar navbar-expand-lg navbar-light nav-yellow border-bottom border-top p-0"
+  >
+    <div class="container">
+      <a class="navbar-brand fs-4 fw-bold"
+        ><i class="fa fa-cart-shopping fs-4" style="color: #f54242"></i
+        ><span class="textBlur">UBasket</span></a
       >
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/products">Product</a>
-        </li>
-
-        <li class="nav-item">
-          <a class="nav-link" href="/category">Category</a>
-        </li>
-      </ul>
-      <form class="d-flex" role="search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
-    </div>
-  </div>
-</nav>
-<div class="container-fluid py-5">
-  `
-  <div class="container py-5">
-    <div class="text-center mx-auto mb-5" style="max-width: 700px">
-      <h1 class="display-4">Bestseller Products</h1>
-      <p>
-        Latin words, combined with a handful of model sentence structures, to
-        generate Lorem Ipsum which looks reasonable.
-      </p>
-    </div>
-    <div class="row g-4">
-      <div class="col-lg-6 col-xl-4" *ngFor="let product of productList">
-        <div class="p-4 rounded bg-light">
-          <div class="row align-items-center">
-            <div class="col-6">
-              <img
-                [src]="product.productImageUrl"
-                class="img-fluid rounded-circle w-100"
-                alt=""
-              />
-            </div>
-            <div class="col-6">
-              <a href="#" class="h5">{{ product.productShortName }}</a>
-              <div class="d-flex my-3">
-                <i class="fas fa-star text-primary"></i>
-                <i class="fas fa-star text-primary"></i>
-                <i class="fas fa-star text-primary"></i>
-                <i class="fas fa-star text-primary"></i>
-                <i class="fas fa-star"></i>
-              </div>
-              <h4 class="mb-3">Rs. {{ product.productPrice }}</h4>
-              <a
-                href="#"
-                class="btn border border-secondary rounded-pill px-3 text-primary"
-                ><i class="fa fa-shopping-bag me-2 text-primary"></i> Add to
-                cart</a
-              >
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-md-6 col-lg-6 col-xl-3">
-        <div class="text-center">
-          <img
-            src="product_img/fruite-item-1.jpg"
-            class="img-fluid rounded"
-            alt=""
-          />
-          <div class="py-4">
-            <a href="#" class="h5">Organic Tomato</a>
-            <div class="d-flex my-3 justify-content-center">
-              <i class="fas fa-star text-primary"></i>
-              <i class="fas fa-star text-primary"></i>
-              <i class="fas fa-star text-primary"></i>
-              <i class="fas fa-star text-primary"></i>
-              <i class="fas fa-star"></i>
-            </div>
-            <h4 class="mb-3">3.12 $</h4>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <!--Toggle  -->
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <!-- Nav Items -->
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav ms-auto mb-2 mb-lg-0 text-center">
+          <li class="nav-item dropdown">
             <a
-              href="#"
-              class="btn border border-secondary rounded-pill px-3 text-primary"
-              ><i class="fa fa-shopping-bag me-2 text-primary"></i> Add to
-              cart</a
+              class="nav-link dropdown-toggle fw-semibold text-uppercase me-1"
+              id="navbarDropdown"
+              role="button"
+              data-bs-toggle="dropdown"
+              aria-expanded="false"
             >
-          </div>
-        </div>
+              Categories
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li
+                *ngFor="let category of categoryList"
+                class="position-relative"
+                (click)="navigateToProducts(category.categoryId)"
+              >
+                <a class="dropdown-item hand"> {{ category.categoryName }} </a>
+                <!-- Nested dropdown for subcategories -->
+              </li>
+            </ul>
+          </li>
+          <li class="nav-item dropdown">
+            <a
+              class="nav-link dropdown-toggle redHover fw-semibold text-uppercase text-black me-1"
+              id="navbarDropdown"
+              role="button"
+              data-bs-toggle="dropdown"
+              aria-expanded="false"
+            >
+              pages
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li><a class="dropdown-item">About Us</a></li>
+              <li><a class="dropdown-item">Contact Us</a></li>
+              <li><a class="dropdown-item">Terms and Conditions</a></li>
+            </ul>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link fw-semibold text-uppercase text-black me-1 hand"
+              >Contact us</a
+            >
+          </li>
+          <li class="nav-item">
+            <a class="nav-link"
+              ><i
+                class="fa-solid fa-magnifying-glass fs-5"
+                style="color: #0c0d0d"
+              ></i
+            ></a>
+          </li>
+          <!-- cart -->
+
+          <ng-container>
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle redHover fw-semibold text-uppercase text-black me-1"
+                id="navbarDropdown"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                <i class="fa fa-user fs-5 me-1" style="color: #202122"></i>
+              </a>
+              <ul
+                class="dropdown-menu loginDropdownMenu"
+                style="left: -50px"
+                aria-labelledby="navbarDropdown"
+              >
+                <li>
+                  <div class="text-center">
+                    <a><button class="btn loginBtn rounded-2">Login</button></a>
+                    <div class="regDiv">
+                      <span>New customer? </span
+                      ><a class="registerLink">Start here.</a>
+                    </div>
+                  </div>
+                </li>
+              </ul>
+            </li>
+          </ng-container>
+          <li class="nav-item">
+            <a class="nav-link"> </a>
+          </li>
+        </ul>
       </div>
     </div>
-  </div>
+  </nav>
+</header>
+<div class="content">
+  <router-outlet></router-outlet>
 </div>
