--- a/src/app/pages/website/landing/landing.component.html
+++ b/src/app/pages/website/landing/landing.component.html
@@ -3,7 +3,7 @@
     class="navbar navbar-expand-lg navbar-light nav-yellow border-bottom border-top p-0"
   >
     <div class="container">
-      <a class="navbar-brand fs-4 fw-bold"
+      <a class="navbar-brand fs-4 fw-bold" href="/webproduct"
         ><i class="fa fa-cart-shopping fs-4" style="color: #f54242"></i
         ><span class="textBlur">UBasket</span></a
       >
