--- a/src/app/pages/website/landing/landing.component.html
+++ b/src/app/pages/website/landing/landing.component.html
@@ -60,12 +60,14 @@
             </ul>
           </li>
           <li class="nav-item">
-            <a class="nav-link fw-semibold text-uppercase text-black me-1 hand"
+            <a
+              class="nav-link fw-semibold text-uppercase text-black me-1"
+              href="#"
               >Contact us</a
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link"
+            <a class="nav-link" href="#"
               ><i
                 class="fa-solid fa-magnifying-glass fs-5"
                 style="color: #0c0d0d"
@@ -73,37 +75,143 @@
             ></a>
           </li>
           <!-- cart -->
-
-          <ng-container>
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle redHover fw-semibold text-uppercase text-black me-1"
-                id="navbarDropdown"
-                role="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-              >
-                <i class="fa fa-user fs-5 me-1" style="color: #202122"></i>
-              </a>
-              <ul
-                class="dropdown-menu loginDropdownMenu"
-                style="left: -50px"
-                aria-labelledby="navbarDropdown"
-              >
-                <li>
-                  <div class="text-center">
-                    <a><button class="btn loginBtn rounded-2">Login</button></a>
-                    <div class="regDiv">
-                      <span>New customer? </span
-                      ><a class="registerLink">Start here.</a>
-                    </div>
+          <li class="nav-item dropdown">
+            <a
+              class="nav-link dropdown-toggle"
+              href="#"
+              id="navbarDropdown3"
+              role="button"
+              data-bs-toggle="dropdown"
+              aria-expanded="false"
+            >
+              <i
+                class="fa fa-cart-shopping fs-5 me-1"
+                style="color: #202122"
+              ></i>
+            </a>
+            <ul
+              class="dropdown-menu menuOnLeft rounded-0 mt-2"
+              aria-labelledby="navbarDropdown3"
+            >
+              <li class="p-2">
+                <div class="d-flex w-100 border-bottom justify-content-evenly">
+                  <div>
+                    <img
+                      style="height: 70px !important; width: 100px !important"
+                      class="img-fluid p-2"
+                      src="./assets/product_img/cartImg1.jfif"
+                      alt="image"
+                    />
                   </div>
-                </li>
-              </ul>
-            </li>
-          </ng-container>
+
+                  <div style="">
+                    <a
+                      href="#"
+                      class="text-decoration-none text-black fw-semibold"
+                    >
+                      <p class="m-0 p-0">Varibale Product 001</p>
+                    </a>
+                    <p>
+                      1
+                      <i class="fa-solid fa-xmark" style="color: #0d0d0d"></i> $
+                      78.00
+                    </p>
+                  </div>
+                  <button type="button" class="btn fs-5 closeBtn">
+                    <i class="fa-solid fa-xmark"></i>
+                  </button>
+                </div>
+              </li>
+              <li class="p-2">
+                <div class="d-flex w-100 border-bottom justify-content-evenly">
+                  <img
+                    style="height: 70px !important; width: 100px !important"
+                    class="img-fluid p-2"
+                    src="./assets/product_img/cartImg2.jfif"
+                    alt=""
+                  />
+                  <div>
+                    <a
+                      href="#"
+                      class="text-decoration-none text-black fw-semibold"
+                    >
+                      <p class="m-0 p-0">Ornare consequat</p>
+                    </a>
+                    <p>
+                      1
+                      <i class="fa-solid fa-xmark" style="color: #0d0d0d"></i> $
+                      81.00
+                    </p>
+                  </div>
+
+                  <button type="button" class="btn fs-5 closeBtn">
+                    <i class="fa-solid fa-xmark"></i>
+                  </button>
+                </div>
+              </li>
+              <li class="p-2">
+                <div class="w-100">
+                  <div class="d-flex justify-content-between">
+                    <h6>SubTotal :</h6>
+                    <h6>$159.00</h6>
+                  </div>
+                  <div class="d-flex justify-content-evenly mt-2">
+                    <button class="btn btn-dark rounded-0 px-3">
+                      View Cart
+                    </button>
+                    <a href="checkout.html">
+                      <button class="btn btn-danger rounded-0 px-3">
+                        Checkout
+                      </button></a
+                    >
+                  </div>
+                </div>
+              </li>
+            </ul>
+          </li>
+          <li class="nav-item dropdown">
+            <a
+              class="nav-link dropdown-toggle redHover fw-semibold text-uppercase text-black me-1"
+              href="#"
+              id="navbarDropdown"
+              role="button"
+              data-bs-toggle="dropdown"
+              aria-expanded="false"
+            >
+              <i class="fa fa-user fs-5 me-1" style="color: #202122"></i>
+            </a>
+            <ul
+              class="dropdown-menu"
+              style="left: -50px"
+              aria-labelledby="navbarDropdown"
+            >
+              <li>
+                <div class="d-flex justify-content-evenly mt-2">
+                  <a
+                    href="#"
+                    data-bs-toggle="offcanvas"
+                    data-bs-target="#offcanvasRight"
+                    aria-controls="offcanvasRight"
+                  >
+                    <button class="btn btn-danger rounded-0 px-3">
+                      Login
+                    </button></a
+                  >
+                  <a
+                    href="#"
+                    data-bs-toggle="modal"
+                    data-bs-target="#exampleModal"
+                  >
+                    <button class="btn btn-danger rounded-0 px-3">
+                      Register
+                    </button></a
+                  >
+                </div>
+              </li>
+            </ul>
+          </li>
           <li class="nav-item">
-            <a class="nav-link"> </a>
+            <a class="nav-link" href="#"> </a>
           </li>
         </ul>
       </div>
